<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_valor_em_reais" />

    <EditText
        android:id="@+id/txt_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_valor" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_calcular" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_limpar" />

</LinearLayout>